# QtAgOpenGPS

./: .gitignore  CMakeLists.txt  PGN.csv  QtAgOpenGPS.desktop.in  QtAgOpenGPS.qmlproject  QtAgOpenGPS.rc  README_TRANSLATIONS.md  TODO.md  TODO.txt  agopengps.qrc  aogproperties.cpp  aogrenderer.cpp  aogrenderer.h  backendaccess.h  branchy.sh  clang-cl-toolchain-debug.cmake  clang-cl-toolchain-release.cmake  cmake_msvc_debug.sh  formgps.cpp  formgps.h  formgps_classcallbacks.cpp  formgps_opengl.cpp  formgps_position.cpp  formgps_saveopen.cpp  formgps_sections.cpp  formgps_settings.cpp  formgps_sim.cpp  formgps_udpcomm.cpp  formgps_ui.cpp  formgps_ui_boundary.cpp  formgps_ui_field.cpp  formgps_ui_tracks.cpp  formgps_ui_vehicle.cpp  formheadache.cpp  formheadache.h  formheadland.cpp  formheadland.h  formtrackdrawer.cpp  formtrackdrawer.h  generate_settings.py  (+19 more)
QtAgIO/: agio.qrc  formloop.cpp  formloop.h  formloop_formudp.cpp  formloop_udpcomm.cpp  formloop_ui.cpp
QtAgIO/inc/: CScanReply.h  CTraffic.h  bluetoothmanager.h
QtAgIO/qml/: AdvancedMenu.qml  AgIOInterface.qml  Main.qml
QtAgIO/src/: CScanReply.cpp  CTraffic.cpp  bluetoothmanager.cpp
android/: AndroidManifest.xml
backend/: backend.cpp  backend.h  blockage.cpp  blockage.h  boundaryinterface.cpp  boundaryinterface.h  camera.cpp  camera.h  fieldinfo.cpp  fieldinfo.h  fieldinterface.cpp  fieldinterface.h  fixframe.h  flagsinterface.cpp  flagsinterface.h  guidance.cpp  guidance.h  headacheinterface.cpp  headacheinterface.h  headlandinterface.cpp  headlandinterface.h  layerservice.cpp  layerservice.h  mainwindowstate.cpp  mainwindowstate.h  modulecomm.cpp  modulecomm.h  ratecontrol.cpp  ratecontrol.h  recordedpath.cpp  recordedpath.h  sectionproperties.cpp  sectionproperties.h  sectionstate.h  siminterface.cpp  siminterface.h  steerconfig.cpp  steerconfig.h  tool.cpp  tool.h  (+6 more)
classes/: agioservice.cpp  agioservice.h  agioservice_udp.cpp  cabcurve.cpp  cabcurve.h  cabline.cpp  cabline.h  cahrs.cpp  cboundary.cpp  cboundary.h  cboundarylist.cpp  cboundarylist.h  ccontour.cpp  ccontour.h  cdubins.cpp  cfence.cpp  cfielddata.cpp  cfielddata.h  cguidance.cpp  cguidance.h  chead.cpp  cmodulecomm.cpp  cmodulecomm.h  cnmea.cpp  cnmea.h  cpatches.cpp  cpatches.h  cpgn.cpp  cpgn.h  crecordedpath.cpp  crecordedpath.h  csection.h  ctool.cpp  ctool.h  ctrack.cpp  ctrack.h  ctraffic.cpp  ctraffic.h  ctram.cpp  ctram.h  (+25 more)
claudedocs/: adding_shader_uniforms_and_vertex_attributes.md  gadget.md  qml_singleton_info.md  round_points_example.md  shader_conversion_guide.md  shader_thick_lines.md  submodules.md
i18n/: qml_de.ts  qml_en.ts  qml_fr.ts  qml_hi.ts  qml_kz.ts  qml_pt.ts  qml_ru.ts  qml_sr.ts
models/: blockagemodel.cpp  blockagemodel.h  fencelinemodel.cpp  fencelinemodel.h  fieldsmodel.cpp  fieldsmodel.h  flagmodel.cpp  flagmodel.h  rcmodel.cpp  rcmodel.h  recordedpathmodel.cpp  recordedpathmodel.h  sectionbuttonsmodel.cpp  sectionbuttonsmodel.h  toolssectionbuttonsmodel.cpp  toolssectionbuttonsmodel.h  toolswithsectionsmodel.cpp  toolswithsectionsmodel.h
qml/: AOGInterface.qml  AOGTheme.qml  AgIOTest.qml  AgIOTestWindow.qml  AllSettings.qml  App.qml  AutoUturnBtn.qml  BlockageData.qml  DisplayButtons.qml  GPSData.qml  HamburgerMenu.qml  HeadAcheDesigner.qml  HeadlandDesigner.qml  HotKeys.qml  LightBar.qml  LineEditor.qml  LineName.qml  MainBottomRow.qml  MainLeftColumn.qml  MainRightColumn.qml  MainTopPanel.qml  MainWindow.qml  MainWindowTest.qml  ManualTurnBtns.qml  MockSettings.qml  MockTracks.qml  RateData.qml  RecPath.qml  SetSimCoords.qml  SimController.qml  Speedometer.qml  StartUp.qml  SteerCircle.qml  TestMainWindow.qml  ToolsWindow.qml  TrackNum.qml  TramIndicators.qml  TramLinesEditor.qml  Utils.qml  qmldir
qml/AOG/: MockAOGRenderer.qml  qmldir
qml/Interface/: MockTracksInterface.qml  MockVehicleInterface.qml  qmldir
qml/Settings/: MockSettings.qml  qmldir
qml/agio/: AdvancedMenu.qml  AgDiag.qml  AgIO.qml  AgIOInterface.qml  AgIOTestWindow.qml  AgIOTheme.qml  BluetoothMenu.qml  ClientNTrip.qml  EthernetConfig.qml  GPSInfo.qml  ModuleConnectionTest.qml  NTrip.qml  PortMenu.qml  SettingsWindow.qml  SourseTable.qml  UnitConversion.qml
qml/boundary/: BoundaryMenu.qml  BoundaryOSM.qml  BoundaryRecord.qml  BoundaryTable.qml  BoundaryType.qml
qml/components/: BlockageRow.qml  BlockageRows.qml  CheckBoxCustomized.qml  ComboBoxCustomized.qml  IconButton.qml  IconButton3State.qml  IconButtonColor.qml  IconButtonTextBeside.qml  LatLonTextField.qml  LiveDataRow.qml  Message.qml  MoveableDialog.qml  MoveablePopup.qml  NumberTextField.qml  ScrollableTextArea.qml  SectionButton.qml  SectionButtons.qml  SectionHeader.qml  SerialTerminalAgio.qml  SettingRow.qml  ShortcutCustomized.qml  SliderCustomized.qml  SpinBoxCM.qml  SpinBoxCustomized.qml  SpinBoxKM.qml  SpinBoxM.qml  SpinBoxOneDecimal.qml  TestSectionButtons.qml  Text.qml  TextLine.qml  TimedMessage.qml  TimedRectangle.qml  TitleFrame.qml  ToolsSectionButtons.qml  TopLine.qml
scenegraph/: aoggeometry.cpp  aoggeometry.h  aogmaterial.cpp  aogmaterial.h  boundariesnode.cpp  boundariesnode.h  boundariesproperties.cpp  boundariesproperties.h  boundaryproperties.cpp  boundaryproperties.h  cameraproperties.cpp  cameraproperties.h  dashedthicklinematerial.cpp  dashedthicklinematerial.h  dotsnode.cpp  dotsnode.h  fieldsurfacenode.cpp  fieldsurfacenode.h  fieldsurfaceproperties.cpp  fieldsurfaceproperties.h  fieldviewitem.cpp  fieldviewitem.h  gridnode.cpp  gridnode.h  gridproperties.cpp  gridproperties.h  layersnode.cpp  layersnode.h  layersproperties.cpp  layersproperties.h  layertypes.h  linenode.cpp  linenode.h  lineproperties.cpp  lineproperties.h  materials.cpp  materials.h  recordedpathnode.cpp  recordedpathnode.h  recordedpathproperties.cpp  (+27 more)
shaders/: color_fshader.frag  color_vshader.vert  colors_fshader.frag  colors_vshader.vert  colortex_fshader.frag  colortex_vshader.vert  dashedthickline.frag  dashedthickline.vert  roundpoint.frag  roundpoint.vert  roundpointsize.frag  roundpointsize.vert  thickline.frag  thickline.vert  thicklinecolors.frag  thicklinecolors.vert
(+68 files in other folders)
